Temp fix of video bug on mobile devices

--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -5,7 +5,7 @@
 }
 
 .scale-1-5 {
-  transform: scale(1.5);
+  // transform: scale(1.5);
 }
 
 .page-min-height {
